重写State，使用接口定义职责